Ajout de la bib javafx